# peer

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/brain/: Cargo.toml
crates/brain/src/: brain.rs  brain_tests.rs  conversation_store.rs  embedder.rs  language_model.rs  memory_index.rs  models.rs  prompts.rs  summarizer.rs  tool.rs  tool_index.rs  tool_search.rs  topic_detector.rs
crates/brain/src/models/: conversation.rs  message.rs  summary.rs
crates/brain/src/testing/: conversation_store.rs  embedder.rs  language_model.rs  memory_index.rs  mod.rs  prompt_registry.rs  summarizer.rs  tool_index.rs  tool_registry.rs  topic_detector.rs
crates/brain_cli/: Cargo.toml
crates/brain_cli/src/: main.rs  ui.rs
crates/brain_evals/: Cargo.toml
crates/brain_evals/datasets/: README.md  detect_topic_shift.v1.jsonl  tool_search_invocation.v1.jsonl
crates/brain_evals/src/: dataset.rs  drift.rs  lib.rs  report.rs  tool_search.rs
crates/brain_evals/tests/: dataset_loads.rs  live_drift.rs  live_tool_search.rs
crates/brain_exa/: Cargo.toml
crates/brain_exa/src/: lib.rs  web_search.rs
crates/brain_mistralai/: Cargo.toml
crates/brain_mistralai/src/: client.rs  lib.rs
crates/brain_prompts_embedded/: Cargo.toml
crates/brain_prompts_embedded/src/: lib.rs
crates/brain_prompts_embedded/templates/: detect_topic_shift.tmpl  summarize_base.tmpl  summarize_compaction.tmpl  summarize_topic_shift.tmpl  system.tmpl
crates/brain_surrealdb/: Cargo.toml
crates/brain_surrealdb/migrations/: 20260101000001_initial_schema.surql  20260101000002_recall.surql  20260101000003_resolved_at.surql  20260101000004_tool_index.surql
crates/brain_surrealdb/src/: lib.rs  migrations.rs  store.rs
crates/brain_surrealdb/tests/: integration.rs
