[workspace]
resolver = "3"
members = [
    "crates/brain",
    "crates/brain_cli",
    "crates/brain_evals",
    "crates/brain_exa",
    "crates/brain_mistralai",
    "crates/brain_prompts_embedded",
    "crates/brain_surrealdb",
]

[workspace.dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
async-trait = "0.1.89"
brain = { path = "crates/brain" }
brain_evals = { path = "crates/brain_evals" }
brain_exa = { path = "crates/brain_exa" }
brain_mistralai = { path = "crates/brain_mistralai" }
brain_prompts_embedded = { path = "crates/brain_prompts_embedded" }
brain_surrealdb = { path = "crates/brain_surrealdb" }
crossterm = "0.29"
futures = "0.3.32"
jiff = "0.2.29"
minijinja = "2"
ratatui = "0.30"
reqwest = "0.13"
serde = "1.0.228"
serde_json = "1.0"
surrealdb = "3.1"
surrealdb-types = "3.1"
surrealdb-types-derive = "3.1"
testcontainers = "0.23"
thiserror = "2.0.18"
tokio = "1.52.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-markdown = "0.3"
uuid = "1.23.3"
