[package]
name = "brain_evals"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
brain = { workspace = true }
jiff = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
brain_mistralai = { workspace = true }
brain_prompts_embedded = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
