[package]
name = "brain_surrealdb"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
brain = { workspace = true }
futures = { workspace = true }
jiff = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
surrealdb = { workspace = true }
surrealdb-types = { workspace = true }
surrealdb-types-derive = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
brain = { workspace = true, features = ["test-harness"] }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
